overflow fix

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html, body {margin:0;padding:0;height:100%;}
 
 body {
-    overflow:hidden;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -32,5 +31,5 @@ li {
 }
 
 .slide {
-  padding: 3% 4% 0 8%;
+  padding: 3% 4% 0 15%;
 }
